logs/grafana/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: logs
  labels:
    app.kubernetes.io/name: grafana-ingress
    app.kubernetes.io/part-of: grafana
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - host: "grafana.tristan.moe"
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 80
  tls:
    - hosts:
        - "grafana.tristan.moe"
      secretName: letsencrypt-cert-grafana.tristan.moe
